Fixed scroll to bottom.

--- a/views/index.html
+++ b/views/index.html
@@ -39,12 +39,6 @@
 
         <div class="about">
         </div>
-        <!--
-        <div class="new-message">
-            <div id="conversation"></div>
-            <input id="data" style="width:200px;" />
-            <input type="button" id="datasend" value="send" />
-        </div>-->
 
     </div>
 
@@ -100,6 +94,14 @@
             padding-bottom: 5px;
             font-family: Georgia, serif;
             font-style: italic;
+        }
+
+        input[type='button'] {
+            border: none;
+            background: #cecece;
+            padding: 6px;
+            border-radius: 4px;
+            cursor: pointer;
         }
     </style>
 
